Bugfix: smaller images not fit to cover

--- a/src/app/equipment/equipment-details/equipment-details.component.scss
+++ b/src/app/equipment/equipment-details/equipment-details.component.scss
@@ -81,6 +81,7 @@
   }
 
   &__image {
+    height: 100%;
     max-height: 100%;
     max-width: 100%;
     display: block;
